# py-insightly

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
insightly/: __init__.py  base.py  config.yaml  contact.py  custom_field.py  exceptions.py  insightly_client.py  link.py  opportunity.py  organisation.py  relationship.py  user.py
insightly/helpers/: utils.py
insightly/models/: __init__.py  address.py  serialization.py
test/: test_insightly_client.py  test_organisation.py
