[tool.poetry]
name = "insightly"
version = "0.0.5"
description = "Python wrapper for Insightly APIs."
authors = ["Henry Marment <henry@adsquare.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
jsonpickle = "^1.1"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
